# geminiswarm1

./: .env  .replit  README.md  STEALTH_PROXY_README.md  ai_helper.py  anthropic_helper.py  autonomous_researcher.py  buggy_code.py  cloudflare_proxy.py  complete_research_results.txt  config.py  demo_research.py  demo_results.txt  enhanced_stealth_proxy.py  escalation_test.py  extended_app.py  fallback_stealth_proxy.py  file_agent.py  flask_proxy.py  flask_proxy_extended.py  gemini_client.py  gemini_stealth_client.py  gemini_stealth_example.py  gemini_stealth_proxy.py  logger.py  loop_controller.py  main.py  multi_provider_proxy.py  openai_helper.py  pyproject.toml  renewable_energy_research.md  run.py  run_all_direct_tests.py  run_demo.py  run_direct_search_test.py  run_dual_servers.py  run_extended_proxy.py  run_extended_proxy_directly.py  run_extended_proxy_server.sh  run_proxies.py  (+43 more)
attached_assets/: Add relevant work experience information _ Indeed.html  Pasted--Updated-loop-controller-py-with-logging-Part-5-import-sys-from-file-agent-import-read-file-writ-1746760182662.txt  Pasted--Updated-loop-controller-py-with-logging-import-sys-from-file-agent-import-read-file-write-file-fr-1746756244336.txt  Pasted--config-py-import-os-from-dotenv-import-load-dotenv-Load-environment-variables-from-a-env-file--1746758005253.txt  Pasted--flask-proxy-extended-py-from-flask-import-Flask-request-jsonify-import-google-generativeai-as-1746761114186.txt  Pasted--flask-proxy-extended-py-from-flask-import-Flask-request-jsonify-import-google-generativeai-as-ge-1746759944159.txt  (+6 more)
(+45 files in other folders)
